--- a/style.css
+++ b/style.css
@@ -70,3 +70,11 @@ color:#6495ed
 i {
 color:#6495ed
 }
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: initial;
+}
